--- a/.gitignore
+++ b/.gitignore
@@ -159,4 +159,13 @@ cython_debug/
 #  be found at https://github.com/github/gitignore/blob/main/Global/JetBrains.gitignore
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
-#.idea/
+.idea/
+
+
+dist
+build
+
+test_client.py
+test_server.py
+test.py
+
